[package]
name = "pi_store"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[lib]

[dependencies]
crc = "*"
bytes = "*"
lazy_static = "*"
fnv = "1.0.3"
tempdir = "0.3"
pi_vm = { path = "../pi_vm" }
lmdb = { git = "https://github.com/GaiaWorld/lmdb-rs"}
pi_db = {path = "../pi_db"}
pi_lib = { path = "../pi_lib" }
pi_base = { path = "../pi_base" }
