[package]
name = "pi_store"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[lib]

[dependencies]
json = "0.11.13"
log = "0.4.6"
crc = "*"
bytes = "*"
lazy_static = "*"
fnv = "1.0.3"
tempdir = "0.3"
rand = "*"
pi_vm = { path = "../pi_vm" }
lmdb = { git = "https://github.com/GaiaWorld/lmdb-rs"}
pi_db = {path = "../pi_db"}
hash_value = { path = "../pi_math/hash_value" }
atom = { path = "../pi_lib/atom" }
worker = { path = "../pi_lib/worker" }
handler = { path = "../pi_lib/handler" }
bon = { path = "../pi_lib/bon" }
apm = { path = "../pi_lib/apm" }
file = { path = "../pi_lib/file" }
gray = {path = "../pi_lib/gray" }
guid = {path = "../pi_lib/guid" }
util = {path = "../pi_lib/util" }
sinfo = {path = "../pi_lib/sinfo" }
timer = {path = "../pi_lib/timer" }
ordmap = {path = "../pi_lib/ordmap" }
crossbeam-channel = "0.3.4"
nodec = { path = "../pi_net/nodec" }
