[package]
name = "rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.10.0"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/spacejam/rust-rocksdb"


[dependencies]
libc = "0.2"
librocksdb-sys = { path = "librocksdb-sys" }
lazy_static = "*"
