[package]
name = "librocksdb-sys"
version = "5.11.3"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/spacejam/rust-rocksdb.git"
keywords = [ "ffi", "rocksdb" ]

[dependencies]
libc = "0.2"

